--- a/Blockchain-module/client/src/App.scss
+++ b/Blockchain-module/client/src/App.scss
@@ -3,5 +3,16 @@
     padding: 0;
     margin: 0;
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
 }
