--- a/Blockchain-module/client/src/components/Partials/Main/Menu/Menu.scss
+++ b/Blockchain-module/client/src/components/Partials/Main/Menu/Menu.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     box-shadow: 2px 0 20px #efefef;
+    background-color: #ffffff;
 
     ::-webkit-scrollbar {
         display: none;
@@ -166,5 +167,12 @@
         .custom-icon {
             margin-left: 1.7rem;
         }
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .menu-component {
+        position: absolute;
+        z-index: 200;
     }
 }
