--- a/Blockchain-module/client/src/components/layouts/Main/Main.scss
+++ b/Blockchain-module/client/src/components/layouts/Main/Main.scss
@@ -2,3 +2,10 @@
     width: 100%;
     display: flex;
 }
+
+@media screen and (max-width: 820px) {
+    .main-component {
+        display: block;
+        position: relative;
+    }
+}
