added layout chart, profile and responsive

--- a/Blockchain-module/client/src/components/Partials/Main/Content/Procedures/Procedure-item/Procedure-item.scss
+++ b/Blockchain-module/client/src/components/Partials/Main/Content/Procedures/Procedure-item/Procedure-item.scss
@@ -52,3 +52,19 @@
         border: 1px solid;
     }
 }
+
+@media screen and (max-width: 800px) {
+    .procedure-item  {
+        .status-content {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .procedure-item  {
+        .no-procedure-content {
+            display: none;
+        }
+    }
+}
