--- a/Blockchain-module/client/src/components/Partials/Main/Content/Content.scss
+++ b/Blockchain-module/client/src/components/Partials/Main/Content/Content.scss
@@ -2,13 +2,14 @@
     width: calc(100% - 25rem);
     height: 100vh;
     overflow-y: scroll;
+    margin-left: auto;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1200px) {
     .content-container {
         width: calc(100% - 5rem) !important;
         position: absolute;
