--- a/Blockchain-module/client/src/components/Partials/Main/Content/Procedures/Procedures.scss
+++ b/Blockchain-module/client/src/components/Partials/Main/Content/Procedures/Procedures.scss
@@ -7,3 +7,11 @@
         width: 15rem;
     }
 }
+
+@media screen and (max-width: 650px) {
+    .main-container {
+        .no-procedure {
+            display: none;
+        }
+    }
+}
