--- a/Blockchain-module/client/src/components/Partials/Main/Content/Products/Products.scss
+++ b/Blockchain-module/client/src/components/Partials/Main/Content/Products/Products.scss
@@ -11,3 +11,28 @@
         width: 9rem;
     }
 }
+
+@media screen and (max-width: 900px) {
+    .main-container {
+        .date-product {
+            display: none;
+        }
+    }
+}
+
+
+@media screen and (max-width: 800px) {
+    .main-container {
+        .status {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .main-container {
+        .quantity-product {
+            display: none;
+        }
+    }
+}
