--- a/Blockchain-module/client/src/components/Partials/Main/Content/Transactions/Transactions.scss
+++ b/Blockchain-module/client/src/components/Partials/Main/Content/Transactions/Transactions.scss
@@ -35,7 +35,29 @@
         .control {
             width: 7rem;
         }
+    }
+}
 
+@media screen and (max-width: 900px) {
+    .main-container {
+        .date-transaction {
+            display: none;
+        }
+    }
+}
 
+@media screen and (max-width: 650px) {
+    .main-container {
+        .no-transaction {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .main-container {
+        .btn-responsive {
+            padding: 5px;
+        }
     }
 }
