--- a/Blockchain-module/client/src/components/partials/features/table/Table.scss
+++ b/Blockchain-module/client/src/components/partials/features/table/Table.scss
@@ -6,7 +6,9 @@
         width: 100%;
         
         .custom-column {
-            display: inline-block;
+            width: auto;
+            display: inline;
+            float: left;
             height: 100%;
         }
     }
