--- a/Blockchain-module/client/src/App.scss
+++ b/Blockchain-module/client/src/App.scss
@@ -27,3 +27,28 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+
+@media screen and (max-width: 1400px) {
+    * {
+        font-size: 13px ;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    * {
+        font-size: 11.5px ;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    * {
+        font-size: 11px ;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    * {
+        font-size: 10px ;
+    }
+}
