--- a/Blockchain-module/client/src/components/partials/features/table/Table.scss
+++ b/Blockchain-module/client/src/components/partials/features/table/Table.scss
@@ -10,6 +10,9 @@
             display: inline;
             float: left;
             height: 100%;
+            p {
+                font-size: 1.25rem;
+            }
         }
     }
 }
