--- a/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/PaddyLogger.scss
+++ b/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/PaddyLogger.scss
@@ -1,8 +1,10 @@
 .paddy-logger-wrapper {
     position: relative;
-    top: 10rem;
+    top: 20rem;
     width:90%;
     margin: 0 auto;
+    height: auto;
+    padding-bottom: 3rem;
     .paddy-logger-title {
         width: 100%;
         text-align: center;
