--- a/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/growing-up/growing-up-row/GrowingUpRow.scss
+++ b/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/growing-up/growing-up-row/GrowingUpRow.scss
@@ -1,4 +1,4 @@
-.plant-protection-table {
+.growing-up-table {
     width: 98.5%;
     margin: 0 auto;
     .row {
@@ -44,23 +44,19 @@
         }
 
         .col-2 {
-            width: 23%;
+            width: 28%;
         }
 
         .col-3 {
-            width: 10%;
+            width: 20%;
         }
 
         .col-4 {
-            width: 10%;
+            width: 20%;
         }
 
         .col-5 {
             width: 10%;
-        }
-
-        .col-6 {
-            width: 25%;
         }
 
         .col-7 {
