--- a/Blockchain-module/client/src/components/layouts/SeasonDetails/SeasonDetail.scss
+++ b/Blockchain-module/client/src/components/layouts/SeasonDetails/SeasonDetail.scss
@@ -1,6 +1,6 @@
 .season-detail-wrapper {
     width: 100%;
-
+    height: auto;
     .season-detail-header {
         width: 100%;
         height: 4rem;
@@ -11,7 +11,6 @@
         background-color: #ffffff;
         z-index: 10;
         box-shadow: 0 0 .1rem .1rem #cecece;
-
         i {
             display: block;
             font-size: 2rem;
@@ -33,5 +32,35 @@
         width: 100%;
         position: relative;
         top: 4rem;
+        .season-image {
+            width: 100%;
+            height: 40rem;
+            overflow: hidden;
+            position: absolute;
+            z-index: -10;
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                display: block;
+                object-fit: cover;
+            }
+            span {
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 1;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(transparent, white);
+            }
+        }
+        .season-content {
+            position: absolute;
+            top: 15rem;
+            left: 0;
+            width: 100%;
+        }
     }
 }
