--- a/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/fertilizer/Fertilizer.scss
+++ b/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/fertilizer/Fertilizer.scss
@@ -1,5 +1,5 @@
 .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
-    transform: translate(1.5rem, .8rem) scale(1) !important;
+    transform: translate(1.5em, .8em) scale(1) !important;
 }
 
 .paddy-fertilizer {
@@ -7,16 +7,16 @@
     .paddy-fertilizer-title {
         width: 100%;
         p {
-            font-size: 1.75rem;
+            font-size: 1.75em;
             font-weight: bold;
         }
     }
 
     .paddy-fertilizer-select-form {
-        margin-bottom: 1rem;
+        margin-bottom: 1em;
         .paddy-fertilizer-select {
-            width: 20rem;
-            height: 3rem;
+            width: 20em;
+            height: 3em;
         }
     
         .select-label {
