--- a/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/fertilizer/fertilizer-row/FertilizerRow.scss
+++ b/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/fertilizer/fertilizer-row/FertilizerRow.scss
@@ -2,9 +2,9 @@
     width: 98.5%;
     margin: 0 auto;
     .row {
-        height: 7rem;
+        height: 7em;
         .col {
-            font-size: 1.2rem;
+            font-size: 1.2em;
             border: 1px solid #cecece;
             border-top: 0;
             display: flex;
@@ -12,8 +12,8 @@
             align-items: center;
             i {
                 cursor: pointer;
-                font-size: 1.6rem;
-                margin: .25rem 0;
+                font-size: 1.6em;
+                margin: .25em 0;
                 transition: color .5s;
             }
             .fa-pen {
@@ -26,17 +26,17 @@
 
             p{
                 width: 100%;
-                margin-top: 1rem;
-                height: 6rem;
+                margin-top: 1em;
+                height: 6em;
                 outline: none;
                 
                 overflow-y: scroll;
-                border-radius: .25rem;
-                padding: .5rem;
+                border-radius: .25em;
+                padding: .5em;
             }
 
             .active-field {
-                border: .1rem solid #cecece;
+                border: .1em solid #cecece;
             }
         }
         .col-1 {
@@ -72,9 +72,9 @@
     }
 
     .row:first-child {
-        height: 3rem;
+        height: 3em;
         border-top: 1px solid #cecece;
-        line-height: 2.5rem;
+        line-height: 2.5em;
         overflow: hidden;
         .col-7 {
             justify-content: flex-start;
@@ -82,15 +82,15 @@
     }
 
     .row:last-child {
-        height: 3rem;
+        height: 3em;
         text-align: center;
         .col {
             width: 100%;
             justify-content: center;
             i {
                 float: none;
-                font-size: 1.5rem;
-                line-height: 3rem;
+                font-size: 1.5em;
+                line-height: 3em;
                 color: #000000;
                 margin: 0;
             }
