--- a/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/growing-up/GrowingUp.scss
+++ b/Blockchain-module/client/src/components/partials/season-detail/paddy-logger/growing-up/GrowingUp.scss
@@ -1,22 +1,22 @@
 .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
-    transform: translate(1.5rem, .8rem) scale(1) !important;
+    transform: translate(1.5em, .8em) scale(1) !important;
 }
 
 .growing-up {
-    margin-top: 5rem;
+    margin-top: 5em;
     .growing-up-title {
         width: 100%;
         p {
-            font-size: 1.75rem;
+            font-size: 1.75em;
             font-weight: bold;
         }
     }
 
     .growing-up-select-form {
-        margin-bottom: 1rem;
+        margin-bottom: 1em;
         .growing-up-select {
-            width: 20rem;
-            height: 3rem;
+            width: 20em;
+            height: 3em;
         }
     
         .select-label {
