--- a/Blockchain-module/client/src/components/partials/Main/Content/ProductDetails/ProductDetail.scss
+++ b/Blockchain-module/client/src/components/partials/Main/Content/ProductDetails/ProductDetail.scss
@@ -13,14 +13,14 @@
             display: block;
             font-size: 2rem;
             font-weight: bold;
-            height: 2rem;
+            padding: 0;
         }
 
         p {
             padding-left: 1rem;
-            height: 2rem;
             font-size: 2rem;
-            font-weight: bold;;
+            font-weight: bold;
+            margin: 0;
         }
     }
 
@@ -30,7 +30,7 @@
         top: 4rem;
         .product-image {
             width: 100%;
-            height: 40rem;
+            height: 25rem;
             overflow: hidden;
             position: absolute;
             z-index: -10;
@@ -54,9 +54,20 @@
         }
         .product-content {
             position: absolute;
-            top: 15rem;
+            top: 6rem;
             left: 0;
             width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .product-detail-wrapper {
+        width: 100%;
+        .product-detail-header {
+            i, p {
+                font-size: 1.5rem;
+            }
         }
     }
 }
