--- a/Blockchain-module/client/src/components/partials/Main/Content/ProductDetails/detail/Detail.scss
+++ b/Blockchain-module/client/src/components/partials/Main/Content/ProductDetails/detail/Detail.scss
@@ -9,7 +9,7 @@
         width: 100%;
         text-align: center;
         height: 4rem;
-        font-size: 3rem;
+        font-size: 2rem;
         font-weight: bold;
     }
 
@@ -17,69 +17,86 @@
 
         width: 100%;
         margin: 0 auto;
-        display: grid;
-        justify-content: space-between;
-        grid-template-columns: auto auto auto;
-        grid-template-rows: 5rem 5rem;
-        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
 
-        >p {
-            font-size: 1.5rem;
-            span {
-                font-size: 1.5rem;
-                font-weight: bold;
-            }
-        }
-    }
-
-    .agric-material {
-
-        .agric-material-title {
-            font-size: 1.5rem;
-        }
-
-        .material-table {
+        .generate-item-wrapper {
             width: 100%;
-            margin: 2rem auto;
-            border: 0 !important;
+            box-shadow: 0 .1em .2rem .05rem #cecece;
+            margin-bottom: 1rem;
+            border-radius: .25rem;
+            .generate-detail-item {
+                height: 3.5rem;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                border-bottom: .1rem solid #dfdfdf;
+                transition: background-color .5s;
+                cursor: pointer;
+                .generate-col {
+                    margin-left: 1.5rem;
+                    font-size: 1.25rem;
+                    i {
+                        margin-right: 1.5rem;
+                    }
+                    span {
+                        font-weight: bold;
+                     }
+                }
+    
+                 > i {
+                     margin-right: 1.5rem;
+                     font-size: 1.25rem;
+                     transition: .5s;
+                 }
+            }
+    
+            .generate-detail-item:hover {
+                background-color: #efefef;
+            }
 
-            .row {
-                height: 4rem;
-                border-bottom: .15rem solid #cecece;
-                .column {
-                    width: 24%;
-                    line-height: 4rem;
-                    text-align: center !important;
-                    font-size: 1.5rem;
+            .detail-content {
+                width: 100%;
+                padding: 0 4.3rem;
+                p {
+                    max-width: 100%;
+                    margin: 1rem 0;
+                    font-weight: bold;
+                    font-size: 1.1rem;
+                    span {
+                        color: #8e8e8e;
+                    }
+                }
+
+                .activity-date-select {
+                    width: 15rem;
+                    margin-top: 2rem;
+                }
+
+                .activity-detail {
+                    margin-top: 1rem;
+                }
+            }
+
+            .detail-content-flex {
+                display: flex;
+                justify-content: flex-start;
+                flex-wrap: wrap;
+                p {
+                    width: 20rem;
                 }
             }
         }
     }
+}
 
-    .transaction-info {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin-top: 4rem;
-        .transaction-info-elm {
-            margin: 0 10rem;
-            p {
-                text-align: center;
-            }
-
-            .title {
-                font-size: 1.5rem;
-                font-weight: bold;
-            }
-
-            .name {
-                font-size: 1.75rem;
-                font-weight: bold;
-            }
-
-            .address, .phone, .email {
-                font-size: 1.25rem;
-            }
+@media screen and (max-width: 700px) {
+    
+    .product-detail {
+        .detail-content {
+            width: 100%;
+            padding: 0 2rem !important;
         }
     }
 }
