--- a/Blockchain-module/client/src/components/partials/Main/Content/TransactionDetails/TransactionDetail.scss
+++ b/Blockchain-module/client/src/components/partials/Main/Content/TransactionDetails/TransactionDetail.scss
@@ -7,20 +7,22 @@
         align-items: center;
         padding-left: 2rem;
         position: fixed;
+        line-height: 2.75rem;
         background-color: #ffffff;
+        border-bottom: .05rem solid #e8e8e8;
         z-index: 10;
         i {
             display: block;
             font-size: 2rem;
             font-weight: bold;
-            height: 2rem;
+            padding: 0;
         }
 
         p {
             padding-left: 1rem;
-            height: 2rem;
             font-size: 2rem;
-            font-weight: bold;;
+            font-weight: bold;
+            margin: 0;
         }
     }
 
@@ -30,7 +32,7 @@
         top: 4rem;
         .transaction-image {
             width: 100%;
-            height: 40rem;
+            height: 25rem;
             overflow: hidden;
             position: absolute;
             z-index: -10;
@@ -49,14 +51,24 @@
                 z-index: 1;
                 width: 100%;
                 height: 100%;
-                background: linear-gradient(transparent, white);
+                background: linear-gradient(transparent, white 90%);
             }
         }
         .transaction-content {
             position: absolute;
-            top: 15rem;
+            top: 6rem;
             left: 0;
             width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width: 700px){
+    .transaction-detail-wrapper {
+        .transaction-detail-header {
+            i,p {
+                font-size: 1.5rem;
+            }
         }
     }
 }
