--- a/Blockchain-module/client/src/components/partials/Main/Content/TransactionDetails/description/Description.scss
+++ b/Blockchain-module/client/src/components/partials/Main/Content/TransactionDetails/description/Description.scss
@@ -5,100 +5,85 @@
     .title {
         width: 100%;
         height: 5rem;
-        font-size: 3rem;
+        font-size: 2rem;
         font-weight: bold;
         text-align: center;
     }
     .generate {
         width: 100%;
         margin: 0 auto;
-        display: grid;
+        display: flex;
+        flex-direction: column;
         justify-content: space-around;
-        grid-template-columns: auto auto auto;
-        grid-template-rows: 3.5rem 3.5rem;
-        > p {
-            font-size: 1.5rem;
-            span {
-                font-size: 1.5rem;
-                font-weight: bold;
-            }
-        }
-    }
 
-    .cooperation-info {
-        width: 80%;
-        margin: 5rem auto;
-        .cooperation-title {
+        .generate-item-wrapper {
             width: 100%;
-            text-align: center;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        .cooperation-name {
-            width: 100%;
-            text-align: center;
-            font-size: 1.75rem;
-            font-weight: bold;
-        }
-        .cooperation-description {
-            width: 100%;
-            text-align: center;
-            font-size: 1.25rem;
-            span {
-                font-size: 1.25rem;
-                font-weight: bold;
+            box-shadow: 0 .1em .2rem .05rem #cecece;
+            margin-bottom: 1rem;
+            border-radius: .25rem;
+            .generate-detail-item {
+                height: 3.5rem;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                border-bottom: .1rem solid #dfdfdf;
+                transition: background-color .5s;
+                cursor: pointer;
+                .generate-col {
+                    margin-left: 1.5rem;
+                    font-size: 1.25rem;
+                    i {
+                        margin-right: 1.5rem;
+                    }
+                    span {
+                        font-weight: bold;
+                     }
+                }
+    
+                 > i {
+                     margin-right: 1.5rem;
+                     font-size: 1.25rem;
+                     transition: .5s;
+                 }
             }
-        }
-    }
-    .buyer-info {
-        width: 80%;
-        margin: 3rem auto;
-        .buyer-title {
-            width: 100%;
-            text-align: center;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        .buyer-name {
-            width: 100%;
-            text-align: center;
-            font-size: 1.75rem;
-            font-weight: bold;
-        }
-        .buyer-description {
-            width: 100%;
-            text-align: center;
-            font-size: 1.25rem;
-            span {
-                font-size: 1.25rem;
-                font-weight: bold;
+    
+            .generate-detail-item:hover {
+                background-color: #efefef;
             }
-        }
-    }
 
-    .sender-info {
-        width: 80%;
-        margin: 3rem auto;
-        .sender-title {
-            width: 100%;
-            text-align: center;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        .sender-name {
-            width: 100%;
-            text-align: center;
-            font-size: 1.75rem;
-            font-weight: bold;
-        }
-        .sender-description {
-            width: 100%;
-            text-align: center;
-            font-size: 1.25rem;
-            span {
-                font-size: 1.25rem;
-                font-weight: bold;
+            .detail-content {
+                width: 100%;
+                padding: 0 4.3rem;
+                p {
+                    max-width: 100%;
+                    margin: 1rem 0;
+                    font-weight: bold;
+                    font-size: 1.1rem;
+                    span {
+                        color: #8e8e8e;
+                    }
+                }
             }
+
+            .detail-content-flex {
+                padding: 0 0 0 4.3rem;
+                display: flex;
+                justify-content: flex-start;
+                flex-wrap: wrap;
+                p {
+                    min-width: 20rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    
+    .transaction-description {
+        .detail-content {
+            width: 100%;
+            padding: 0 2rem !important;
         }
     }
 }
