--- a/Blockchain-module/client/src/components/partials/Main/Content/TransactionDetails/verify/Verify.scss
+++ b/Blockchain-module/client/src/components/partials/Main/Content/TransactionDetails/verify/Verify.scss
@@ -5,18 +5,18 @@
         text-align: center;
     }
     .name {
-        font-size: 5rem;
+        font-size: 3.5rem;
         font-weight: bold;
         color: #444444;
         text-transform: uppercase;
     }
     .number {
-        font-size: 2.5rem;
+        font-size: 2rem;
         font-weight: bold;
         color: #444444;
     }
     .status {
-        font-size: 1.75rem;
+        font-size: 1.5rem;
         font-weight: bold;
         color: #444444;
         text-transform: uppercase;
@@ -30,18 +30,48 @@
         padding: 2rem 0;
         border-bottom: .15rem solid #dddddd;
         .title {
-            font-size: 1.5rem;
+            font-size: 1.1rem;
             font-weight: bold;
         }
 
         .time {
-            font-size: 1.25rem;
+            font-size: 1rem;
         }
 
         .sign {
-            font-size: 1.75rem;
+            font-size: 1.25rem;
             text-transform: uppercase;
             font-weight: bold;
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .transaction-verify {
+        .name {
+            font-size: 2.25rem;
+        }
+
+        .number {
+            font-size: 1.75rem;
+        }
+        .status {
+            font-size: 1.25rem;
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .transaction-verify {
+        .name {
+            font-size: 2rem;
+        }
+
+        .number {
+            font-size: 1.75rem;
+        }
+        .status {
+            font-size: 1.25rem;
         }
     }
 }
