--- a/Blockchain-module/client/src/components/partials/Main/Content/Content.scss
+++ b/Blockchain-module/client/src/components/partials/Main/Content/Content.scss
@@ -1,20 +1,23 @@
 .content-container {
-    width: calc(100% - 25rem);
+    width: calc(100% - 5rem) !important;
+    position: absolute;
+    right: 0;
+    z-index: 100;
     height: 100vh;
     overflow-y: scroll;
     margin-left: auto;
-    transition: width .5s;
+    transition: width 0.5s;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
-@media screen and (max-width: 1200px) {
-    .content-container {
-        width: calc(100% - 5rem) !important;
-        position: absolute;
-        right: 0;
-        z-index: 100;
-    }
-}
+// @media screen and (max-width: 1200px) {
+//     .content-container {
+//         width: calc(100% - 5rem) !important;
+//         position: absolute;
+//         right: 0;
+//         z-index: 100;
+//     }
+// }
