added config api

--- a/Blockchain-module/client/src/components/partials/Main/Content/AddTransaction/add-transaction-framer/add-transaction-framer.scss
+++ b/Blockchain-module/client/src/components/partials/Main/Content/AddTransaction/add-transaction-framer/add-transaction-framer.scss
@@ -18,6 +18,10 @@
                 object-fit: cover;
             }
         }
+
+        .show-text-error {
+            display: block;
+        }
     }
 }
 
