create activity date, update getall product fe

--- a/Blockchain-module/client/src/components/partials/Main/Content/ProductDetails/detail/Detail.scss
+++ b/Blockchain-module/client/src/components/partials/Main/Content/ProductDetails/detail/Detail.scss
@@ -84,7 +84,7 @@
                 justify-content: flex-start;
                 flex-wrap: wrap;
                 p {
-                    width: 20rem;
+                    min-width: 30rem;
                 }
             }
         }
