--- a/Blockchain-module/client/customer/src/components/common/timeline/item/timeline-item.component.scss
+++ b/Blockchain-module/client/customer/src/components/common/timeline/item/timeline-item.component.scss
@@ -8,6 +8,8 @@
     top: 7rem;
     left: 18.7rem;
     padding: 1rem 1.5rem;
+    transition: .25s;
+    cursor: pointer;
     p {
       font-size: 1.2rem;
     }
@@ -22,6 +24,10 @@
       width: 1rem;
       height: 1rem;
       clip-path: polygon(100% 0, 0 50%, 100% 100%);
+    }
+  
+    &:hover {
+      transform: scale(1.1) translateX(1.5rem);
     }
   }
 }
