--- a/Blockchain-module/client/customer/src/pages/product-detail/style.scss
+++ b/Blockchain-module/client/customer/src/pages/product-detail/style.scss
@@ -4,8 +4,7 @@
   position: relative;
   top: 4rem;
   .timeline {
-    width: 500px;
-    margin-left: 10rem;
+    width: 35rem;
     margin-top: 10rem;
   }
 }
