--- a/Blockchain-module/client/customer/src/components/common/image/image.component.scss
+++ b/Blockchain-module/client/customer/src/components/common/image/image.component.scss
@@ -1,6 +1,8 @@
 .common-image-tag {
-    width: 25rem;
-    height: 20rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     margin: 0 auto;
     display: block;
+    border-radius: .5rem;
 }
