--- a/Blockchain-module/client/admin/src/components/partials/background/background.scss
+++ b/Blockchain-module/client/admin/src/components/partials/background/background.scss
@@ -2,6 +2,6 @@
     width: 100%;
     height: 100vh;
     background-color: rgba($color: #c6c6c6, $alpha: .5);
-    position: absolute;
+    position: fixed;
     top: 0;
 }
