--- a/Blockchain-module/client/admin/src/components/partials/menu/menu.scss
+++ b/Blockchain-module/client/admin/src/components/partials/menu/menu.scss
@@ -4,7 +4,7 @@
     overflow-y: scroll;
     overflow-x: hidden;
     background-color: #06b035;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 200;
