added layout profile

--- a/Blockchain-module/client/admin/src/components/partials/add-product/add-product.scss
+++ b/Blockchain-module/client/admin/src/components/partials/add-product/add-product.scss
@@ -27,6 +27,14 @@
                 margin-right: 0;
             }
         }
+
+        .buttons-add-product {
+            display: flex;
+
+            .btn {
+                margin-right: 10px;
+            }
+        }
     }
 }
 
